--- a/programs/roullete/Cargo.toml
+++ b/programs/roullete/Cargo.toml
@@ -11,12 +11,12 @@ name = "roullete"
 
 [features]
 no-entrypoint = []
-no-idl = []
+idl-build = ["anchor-lang/idl-build"]
 no-log-ix-name = []
 cpi = ["no-entrypoint"]
 default = []
 
 [dependencies]
-anchor-lang = "0.29.0"
-solana-program = "1.18.9"
-arrayref = "0.3.7"
+anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
+arrayref = "0.3.9"
+solana-program = "1.18.8"
